--- a/1_pandas_series_checkpoint.ipynb
+++ b/1_pandas_series_checkpoint.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "qIIFqRV0Hqx_"
       },
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "agNqIBqpHqyn"
       },
@@ -47,14 +47,60 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "scrolled": true,
-        "id": "e0031AcoHqyx"
+        "id": "e0031AcoHqyx",
+        "outputId": "36f6cbdc-40ab-401d-983b-db03f859c0c2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    35.467\n",
+              "1    63.951\n",
+              "dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ],
       "source": [
-        "g7_pop"
+        "g7_pop[0:2]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Indexing\n",
+        "parcelNum = \"Florida Apartments\"\n",
+        "print (\"Indexing: \" + parcelNum[6])\n",
+        "\n",
+        "# Slicing\n",
+        "print(\"Slicing: \" + parcelNum[3:9])"
+      ],
+      "metadata": {
+        "id": "1W8S7_aSM4pE",
+        "outputId": "81c94616-e14a-42fd-e1dd-32f12bfcb5fd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Indexing: a\n",
+            "Slicing: rida A\n"
+          ]
+        }
       ]
     },
     {
