--- a/Pandas/Pandas/1 - Pandas - Series.ipynb
+++ b/Pandas/Pandas/1 - Pandas - Series.ipynb
@@ -7,12 +7,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/AllanMogley/Data-Science-Works/blob/main/1_pandas_series_checkpoint.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/AllanMogley/Data-Science-Works/blob/main/Pandas/Pandas/1%20-%20Pandas%20-%20Series.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "qIIFqRV0Hqx_"
       },
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "agNqIBqpHqyn"
       },
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "scrolled": true,
         "id": "e0031AcoHqyx",
@@ -91,7 +91,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "Cp6lYmFqHqy1"
       },
@@ -125,13 +125,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "id": "Ka_6iURAHqy3"
+        "id": "Ka_6iURAHqy3",
+        "outputId": "e2a5cfd6-9574-4950-b852-4889c90e599c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0     35.467\n",
+              "1     63.951\n",
+              "2     80.940\n",
+              "3     60.665\n",
+              "4    127.061\n",
+              "Name: G7 Population in millions, dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ],
       "source": [
-        "g7_pop"
+        "g7_pop.head()"
       ]
     },
     {
