--- a/04 Data Exploration/Data Works.ipynb
+++ b/04 Data Exploration/Data Works.ipynb
@@ -4,16 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "01 - Import Libraries, access and read datasets"
+    "01 - Data Exploration (Understanding Data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import math\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error"
    ]
   },
   {
@@ -1207,7 +1214,7 @@
     }
    ],
    "source": [
-    "df.isnull().sum()"
+    "df.isna().sum() # Check null values"
    ]
   },
   {
@@ -1455,107 +1462,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>MinTemp</th>\n",
-       "      <th>MaxTemp</th>\n",
-       "      <th>Rainfall</th>\n",
-       "      <th>Evaporation</th>\n",
-       "      <th>Sunshine</th>\n",
-       "      <th>WindGustDir</th>\n",
-       "      <th>WindGustSpeed</th>\n",
-       "      <th>WindDir9am</th>\n",
-       "      <th>WindDir3pm</th>\n",
-       "      <th>WindSpeed9am</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Humidity3pm</th>\n",
-       "      <th>Pressure9am</th>\n",
-       "      <th>Pressure3pm</th>\n",
-       "      <th>Cloud9am</th>\n",
-       "      <th>Cloud3pm</th>\n",
-       "      <th>Temp9am</th>\n",
-       "      <th>Temp3pm</th>\n",
-       "      <th>RainToday</th>\n",
-       "      <th>RISK_MM</th>\n",
-       "      <th>RainTomorrow</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>258</th>\n",
-       "      <td>-0.9</td>\n",
-       "      <td>12.8</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>N</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>NNW</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>62</td>\n",
-       "      <td>1024.1</td>\n",
-       "      <td>1020.8</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>12.1</td>\n",
-       "      <td>No</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 22 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     MinTemp  MaxTemp  Rainfall  Evaporation  Sunshine WindGustDir  \\\n",
-       "258     -0.9     12.8       0.2          2.0       1.9           N   \n",
-       "\n",
-       "     WindGustSpeed WindDir9am WindDir3pm  WindSpeed9am  ...  Humidity3pm  \\\n",
-       "258           17.0         SE        NNW           6.0  ...           62   \n",
-       "\n",
-       "     Pressure9am  Pressure3pm  Cloud9am  Cloud3pm  Temp9am  Temp3pm  \\\n",
-       "258       1024.1       1020.8         7         7      2.7     12.1   \n",
-       "\n",
-       "     RainToday  RISK_MM RainTomorrow  \n",
-       "258         No      0.0           No  \n",
-       "\n",
-       "[1 rows x 22 columns]"
+       "0"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes\n",
+    "df.duplicated().sum() # Check duplicates\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Select multiple columns by conditions\n",
-    "df[(df['WindGustSpeed'] < 20)  & (df['Rainfall'] > 0.1)]\n"
+    "# df[(df['WindGustSpeed'] < 20)  & (df['Rainfall'] > 0.1)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[57], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[39m# Create box plots for each numerical column\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[39mfor\u001b[39;00m column \u001b[39min\u001b[39;00m numerical_columns:\n\u001b[1;32m----> 6\u001b[0m     plt\u001b[39m.\u001b[39mfigure(figsize \u001b[39m=\u001b[39m (\u001b[39m6\u001b[39m, \u001b[39m6\u001b[39m))\n\u001b[0;32m      7\u001b[0m     sns\u001b[39m.\u001b[39mboxplot(data \u001b[39m=\u001b[39m df[column])\n\u001b[0;32m      8\u001b[0m     plt\u001b[39m.\u001b[39mtitle(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mBox Plot - \u001b[39m\u001b[39m{\u001b[39;00mcolumn\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'plt' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Select columns containing numerical data\n",
+    "numerical_columns = df.columns\n",
+    "\n",
+    "# Create box plots for each numerical column\n",
+    "for column in numerical_columns:\n",
+    "    plt.figure(figsize = (6, 6))\n",
+    "    sns.boxplot(data = df[column])\n",
+    "    plt.title(f'Box Plot - {column}')\n",
+    "    plt.show()"
    ]
   }
  ],
