--- a/04 Data Exploration/Data Works.ipynb
+++ b/04 Data Exploration/Data Works.ipynb
@@ -40,12 +40,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# View dataframe column/ row information, size and data types \n",
     "df.head()\n",
     "df.tail()\n",
     "df.shape\n",
     "df.index\n",
-    "# df.columns\n",
-    "# df.dtypes"
+    "df.columns\n",
+    "df.dtypes"
    ]
   },
   {
@@ -58,26 +59,9 @@
     "df.nunique() # Display a total of unique values\n",
     "df['Evaporation'].value_counts()\n",
     "df.count # Display a total of not null values\n",
-    "# df.info()\n",
-    "# df.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[df.Evaporation == 2.2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.isna().sum() # Check null values"
+    "df.isna().sum() # Check null values\n",
+    "df.info()\n",
+    "df.describe()"
    ]
   },
   {
