Corrected Variable names

--- a/04 Data Exploration/Data Works.ipynb
+++ b/04 Data Exploration/Data Works.ipynb
@@ -81,18 +81,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "df.dtypes\n",
-    "# df.duplicated().sum() # Check duplicates\n",
-    "df1 = df.drop(\"WindGustDir\", \"RainToday\", \"RainTomorrow\")\n"
+    "df.duplicated().sum() # Check duplicates\n",
+    "df1 = df.drop(\"WindGustDir\", \"RainToday\", \"RainTomorrow\") # Delete columns\n"
    ]
   },
   {
@@ -116,7 +107,7 @@
     "\n",
     "\n",
     "# Create box plots for each numerical column\n",
-    "for column in numa:\n",
+    "for column in numerical_columns:\n",
     "    plt.figure(figsize = (6, 6))\n",
     "    sns.boxplot(data = df[column])\n",
     "    plt.title(f'Box Plot - {column}')\n",
@@ -185,7 +176,7 @@
    "outputs": [],
    "source": [
     "# Scatterplot of Rainfall vs all columns\n",
-    "for column in numa:\n",
+    "for column in num1:\n",
     "    plt.figure(figsize = (10, 6))\n",
     "    sns.scatterplot(data = num1, x = num1[column], y = num1[\"Rainfall\"])\n",
     "    plt.xlabel(column, weight = \"bold\", fontsize = 12, labelpad = 10)\n",
