--- a/04 Data Exploration/Data Works.ipynb
+++ b/04 Data Exploration/Data Works.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "01 - Data Exploration (Understanding Data)"
+    "## 01 - Data Exploration (Understanding Data)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -143,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "02 - Exploratory Data Analysis"
+    "## 02 - Exploratory Data Analysis"
    ]
   },
   {
