Added comment explantions

--- a/04 Data Exploration/Data Works.ipynb
+++ b/04 Data Exploration/Data Works.ipynb
@@ -11,10 +11,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I)   Read raw data tables saved as csv format\n",
-    "II)  Perform exploratory analysis to understand the data\n",
-    "III) Perform simple Machine Learning algorithm for weather prediction\n",
-    "IV)  The data used id provided within the folder if this note book"
+    "I)   Read raw data tables saved as csv format  \n",
+    "II)  Perform exploratory analysis to understand the data  \n",
+    "III) Perform simple Machine Learning algorithm for weather prediction  \n",
+    "IV)  The data used id provided within the folder if this note book  "
    ]
   },
   {
@@ -71,7 +71,7 @@
     "df.count # Display a total of not null values\n",
     "df.isna().sum() # Check null values\n",
     "df.info()\n",
-    "df.describe()"
+    "df.describe() # Calculate mean, std, variance etc"
    ]
   },
   {
@@ -117,6 +117,7 @@
     "\n",
     "\n",
     "# Create box plots for each numerical column\n",
+    "# This helps us explore the distribution of values and to remove outliers\n",
     "for column in numerical_columns:\n",
     "    plt.figure(figsize = (6, 6))\n",
     "    sns.boxplot(data = df[column])\n",
