--- a/04 Data Exploration/Data Works.ipynb
+++ b/04 Data Exploration/Data Works.ipynb
@@ -11,10 +11,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I)   Read raw data tables saved as csv format  \n",
-    "II)  Perform exploratory analysis to understand the data  \n",
-    "III) Perform simple Machine Learning algorithm for weather prediction  \n",
-    "IV)  The data used id provided within the folder if this note book  "
+    "Read raw data tables saved as csv format  \n",
+    "Perform exploratory analysis to understand the data  \n",
+    "Perform simple Machine Learning algorithm for weather prediction  \n",
+    "The data used id provided within the folder if this note book  "
    ]
   },
   {
