VS Code Render erros

--- a/04 Data Exploration/Data Works.ipynb
+++ b/04 Data Exploration/Data Works.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
        "[366 rows x 22 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,16 +421,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(366, 22)"
+       "Index(['MinTemp', 'MaxTemp', 'Rainfall', 'Evaporation', 'Sunshine',\n",
+       "       'WindGustDir', 'WindGustSpeed', 'WindDir9am', 'WindDir3pm',\n",
+       "       'WindSpeed9am', 'WindSpeed3pm', 'Humidity9am', 'Humidity3pm',\n",
+       "       'Pressure9am', 'Pressure3pm', 'Cloud9am', 'Cloud3pm', 'Temp9am',\n",
+       "       'Temp3pm', 'RainToday', 'RISK_MM', 'RainTomorrow'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +446,7 @@
     "# df.tail()\n",
     "df.shape\n",
     "# df.index\n",
-    "# df.columns\n",
+    "df.columns\n",
     "# df.dtypes"
    ]
   },
@@ -462,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +481,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
