--- a/05 LuxDev BootCamp/01 Python_SQL_Intro/sql.ipynb
+++ b/05 LuxDev BootCamp/01 Python_SQL_Intro/sql.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,9 +52,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cur.execute(\"CREATE TABLE restaurants (id SERIAL PRIMARY KEY,name VARCHAR(255) NOT NULL)\")\n",
-    "cur.execute(\"INSERT INTO restaurants (id, name) VALUES ('3', 'test')\")\n",
-    "conn.commit()"
+    "# cur.execute(\"CREATE TABLE restaurants (id SERIAL PRIMARY KEY,name VARCHAR(255) NOT NULL)\")\n",
+    "# cur.execute(\"INSERT INTO restaurants (id, name) VALUES ('3', 'test')\")\n",
+    "# conn.commit()"
    ]
   },
   {
@@ -63,31 +63,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cur.execute(\"DELETE FROM restaurants WHERE id = 3\")\n",
-    "conn.commit()"
+    "# cur.execute(\"DELETE FROM restaurants WHERE id = 3\")\n",
+    "# conn.commit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "InFailedSqlTransaction",
-     "evalue": "current transaction is aborted, commands ignored until end of transaction block\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mInFailedSqlTransaction\u001b[0m                    Traceback (most recent call last)",
-      "\u001b[1;32me:\\Codes\\04 - Data Science\\Data-Science-Works\\05 LuxDev BootCamp\\01 Python_SQL_Intro\\sql.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/Codes/04%20-%20Data%20Science/Data-Science-Works/05%20LuxDev%20BootCamp/01%20Python_SQL_Intro/sql.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m cur\u001b[39m.\u001b[39;49mexecute(\u001b[39m\"\u001b[39;49m\u001b[39mUPDATE restaurants SET id = id - 1\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/Codes/04%20-%20Data%20Science/Data-Science-Works/05%20LuxDev%20BootCamp/01%20Python_SQL_Intro/sql.ipynb#X11sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m conn\u001b[39m.\u001b[39mcommit()\n",
-      "\u001b[1;31mInFailedSqlTransaction\u001b[0m: current transaction is aborted, commands ignored until end of transaction block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cur.execute(\"UPDATE restaurants SET id = id - 1\")\n",
-    "conn.commit()\n"
+    "# cur.execute(\"UPDATE restaurants SET id = id - 1\")\n",
+    "# conn.commit()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
