--- a/07 Spatial Techniques/01 Image Metadata/exif.ipynb
+++ b/07 Spatial Techniques/01 Image Metadata/exif.ipynb
@@ -23,25 +23,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create Export names\n",
-    "images_f = []\n",
-    "for name in images_:\n",
-    "    name = name[27:]\n",
-    "    name = name[:4] + name[22:]\n",
-    "    images_f.append(name)\n",
-    "\n",
-    "len(images_f)\n",
-    "df = pd.DataFrame()\n",
-    "df[\"Name\"] = images_f"
+    "lis = []\n",
+    "for x in images_:\n",
+    "    with open(x, 'rb') as image_file:\n",
+    "        my_image = Image(image_file)\n",
+    "        dat = my_image.get_all()\n",
+    "        lis.append(dat)\n",
+    "# lis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(lis)\n",
+    "df[\"\"] = df.index + 1\n",
+    "df.set_index(\"\", inplace = True)\n",
+    "\n",
+    "# df.info()\n",
+    "# df.isnull().sum()\n",
+    "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -65,168 +77,234 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>yres</th>\n",
-       "      <th>xres</th>\n",
-       "      <th>Res. Unit</th>\n",
-       "      <th>Aperture</th>\n",
-       "      <th>S_Dist</th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>jpeg_interchange_format_length</th>\n",
+       "      <th>photographic_sensitivity</th>\n",
+       "      <th>datetime_original</th>\n",
+       "      <th>datetime_digitized</th>\n",
+       "      <th>compressed_bits_per_pixel</th>\n",
+       "      <th>light_source</th>\n",
+       "      <th>gps_latitude</th>\n",
+       "      <th>gps_longitude</th>\n",
+       "      <th>gps_altitude</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>142_.JPG</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.97</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>143_.JPG</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.97</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2023:07:25 15:50:14</td>\n",
+       "      <td>10530</td>\n",
+       "      <td>250</td>\n",
+       "      <td>2023:07:25 15:50:14</td>\n",
+       "      <td>2023:07:25 15:50:14</td>\n",
+       "      <td>3.352229</td>\n",
+       "      <td>1</td>\n",
+       "      <td>(1.0, 5.0, 10.0902)</td>\n",
+       "      <td>(37.0, 0.0, 26.06)</td>\n",
+       "      <td>1526.248</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>144_.JPG</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.97</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2023:07:25 15:50:17</td>\n",
+       "      <td>10438</td>\n",
+       "      <td>250</td>\n",
+       "      <td>2023:07:25 15:50:16</td>\n",
+       "      <td>2023:07:25 15:50:16</td>\n",
+       "      <td>3.267610</td>\n",
+       "      <td>1</td>\n",
+       "      <td>(1.0, 5.0, 10.0275)</td>\n",
+       "      <td>(37.0, 0.0, 26.1302)</td>\n",
+       "      <td>1526.257</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>145_.JPG</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.97</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2023:07:25 15:50:19</td>\n",
+       "      <td>10320</td>\n",
+       "      <td>250</td>\n",
+       "      <td>2023:07:25 15:50:19</td>\n",
+       "      <td>2023:07:25 15:50:19</td>\n",
+       "      <td>3.253560</td>\n",
+       "      <td>1</td>\n",
+       "      <td>(1.0, 5.0, 9.9604)</td>\n",
+       "      <td>(37.0, 0.0, 26.2063)</td>\n",
+       "      <td>1526.279</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>146_.JPG</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>72.0</td>\n",
+       "      <td>2023:07:25 15:50:22</td>\n",
+       "      <td>10412</td>\n",
+       "      <td>200</td>\n",
+       "      <td>2023:07:25 15:50:21</td>\n",
+       "      <td>2023:07:25 15:50:21</td>\n",
+       "      <td>3.200524</td>\n",
        "      <td>2</td>\n",
-       "      <td>2.97</td>\n",
-       "      <td>0</td>\n",
+       "      <td>(1.0, 5.0, 9.8996)</td>\n",
+       "      <td>(37.0, 0.0, 26.2787)</td>\n",
+       "      <td>1526.255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2023:07:25 15:50:24</td>\n",
+       "      <td>10269</td>\n",
+       "      <td>200</td>\n",
+       "      <td>2023:07:25 15:50:24</td>\n",
+       "      <td>2023:07:25 15:50:24</td>\n",
+       "      <td>3.312147</td>\n",
+       "      <td>2</td>\n",
+       "      <td>(1.0, 5.0, 9.8403)</td>\n",
+       "      <td>(37.0, 0.0, 26.3529)</td>\n",
+       "      <td>1526.255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2023:07:25 15:50:26</td>\n",
+       "      <td>10366</td>\n",
+       "      <td>200</td>\n",
+       "      <td>2023:07:25 15:50:25</td>\n",
+       "      <td>2023:07:25 15:50:25</td>\n",
+       "      <td>3.289757</td>\n",
+       "      <td>2</td>\n",
+       "      <td>(1.0, 5.0, 9.8232)</td>\n",
+       "      <td>(37.0, 0.0, 26.4065)</td>\n",
+       "      <td>1526.283</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2023:07:25 15:50:27</td>\n",
+       "      <td>10720</td>\n",
+       "      <td>200</td>\n",
+       "      <td>2023:07:25 15:50:26</td>\n",
+       "      <td>2023:07:25 15:50:26</td>\n",
+       "      <td>3.257762</td>\n",
+       "      <td>2</td>\n",
+       "      <td>(1.0, 5.0, 9.8405)</td>\n",
+       "      <td>(37.0, 0.0, 26.4365)</td>\n",
+       "      <td>1526.290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2023:07:25 15:50:29</td>\n",
+       "      <td>10442</td>\n",
+       "      <td>160</td>\n",
+       "      <td>2023:07:25 15:50:29</td>\n",
+       "      <td>2023:07:25 15:50:29</td>\n",
+       "      <td>3.236896</td>\n",
+       "      <td>2</td>\n",
+       "      <td>(1.0, 5.0, 9.924)</td>\n",
+       "      <td>(37.0, 0.0, 26.5114)</td>\n",
+       "      <td>1526.288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2023:07:25 15:50:31</td>\n",
+       "      <td>10644</td>\n",
+       "      <td>160</td>\n",
+       "      <td>2023:07:25 15:50:30</td>\n",
+       "      <td>2023:07:25 15:50:30</td>\n",
+       "      <td>3.221476</td>\n",
+       "      <td>2</td>\n",
+       "      <td>(1.0, 5.0, 9.9837)</td>\n",
+       "      <td>(37.0, 0.0, 26.5276)</td>\n",
+       "      <td>1526.282</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2023:07:25 15:50:32</td>\n",
+       "      <td>10628</td>\n",
+       "      <td>200</td>\n",
+       "      <td>2023:07:25 15:50:31</td>\n",
+       "      <td>2023:07:25 15:50:31</td>\n",
+       "      <td>3.231061</td>\n",
+       "      <td>2</td>\n",
+       "      <td>(1.0, 5.0, 10.0146)</td>\n",
+       "      <td>(37.0, 0.0, 26.5071)</td>\n",
+       "      <td>1526.296</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Name  yres  xres  Res. Unit  Aperture  S_Dist\n",
-       "0  142_.JPG  72.0  72.0          2      2.97       0\n",
-       "1  143_.JPG  72.0  72.0          2      2.97       0\n",
-       "2  144_.JPG  72.0  72.0          2      2.97       0\n",
-       "3  145_.JPG  72.0  72.0          2      2.97       0\n",
-       "4  146_.JPG  72.0  72.0          2      2.97       0"
+       "               datetime  jpeg_interchange_format_length  \\\n",
+       "                                                          \n",
+       "1   2023:07:25 15:50:14                           10530   \n",
+       "2   2023:07:25 15:50:17                           10438   \n",
+       "3   2023:07:25 15:50:19                           10320   \n",
+       "4   2023:07:25 15:50:22                           10412   \n",
+       "5   2023:07:25 15:50:24                           10269   \n",
+       "6   2023:07:25 15:50:26                           10366   \n",
+       "7   2023:07:25 15:50:27                           10720   \n",
+       "8   2023:07:25 15:50:29                           10442   \n",
+       "9   2023:07:25 15:50:31                           10644   \n",
+       "10  2023:07:25 15:50:32                           10628   \n",
+       "\n",
+       "    photographic_sensitivity    datetime_original   datetime_digitized  \\\n",
+       "                                                                         \n",
+       "1                        250  2023:07:25 15:50:14  2023:07:25 15:50:14   \n",
+       "2                        250  2023:07:25 15:50:16  2023:07:25 15:50:16   \n",
+       "3                        250  2023:07:25 15:50:19  2023:07:25 15:50:19   \n",
+       "4                        200  2023:07:25 15:50:21  2023:07:25 15:50:21   \n",
+       "5                        200  2023:07:25 15:50:24  2023:07:25 15:50:24   \n",
+       "6                        200  2023:07:25 15:50:25  2023:07:25 15:50:25   \n",
+       "7                        200  2023:07:25 15:50:26  2023:07:25 15:50:26   \n",
+       "8                        160  2023:07:25 15:50:29  2023:07:25 15:50:29   \n",
+       "9                        160  2023:07:25 15:50:30  2023:07:25 15:50:30   \n",
+       "10                       200  2023:07:25 15:50:31  2023:07:25 15:50:31   \n",
+       "\n",
+       "    compressed_bits_per_pixel  light_source         gps_latitude  \\\n",
+       "                                                                   \n",
+       "1                    3.352229             1  (1.0, 5.0, 10.0902)   \n",
+       "2                    3.267610             1  (1.0, 5.0, 10.0275)   \n",
+       "3                    3.253560             1   (1.0, 5.0, 9.9604)   \n",
+       "4                    3.200524             2   (1.0, 5.0, 9.8996)   \n",
+       "5                    3.312147             2   (1.0, 5.0, 9.8403)   \n",
+       "6                    3.289757             2   (1.0, 5.0, 9.8232)   \n",
+       "7                    3.257762             2   (1.0, 5.0, 9.8405)   \n",
+       "8                    3.236896             2    (1.0, 5.0, 9.924)   \n",
+       "9                    3.221476             2   (1.0, 5.0, 9.9837)   \n",
+       "10                   3.231061             2  (1.0, 5.0, 10.0146)   \n",
+       "\n",
+       "           gps_longitude  gps_altitude  \n",
+       "                                        \n",
+       "1     (37.0, 0.0, 26.06)      1526.248  \n",
+       "2   (37.0, 0.0, 26.1302)      1526.257  \n",
+       "3   (37.0, 0.0, 26.2063)      1526.279  \n",
+       "4   (37.0, 0.0, 26.2787)      1526.255  \n",
+       "5   (37.0, 0.0, 26.3529)      1526.255  \n",
+       "6   (37.0, 0.0, 26.4065)      1526.283  \n",
+       "7   (37.0, 0.0, 26.4365)      1526.290  \n",
+       "8   (37.0, 0.0, 26.5114)      1526.288  \n",
+       "9   (37.0, 0.0, 26.5276)      1526.282  \n",
+       "10  (37.0, 0.0, 26.5071)      1526.296  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "xres = []\n",
-    "yres = []\n",
-    "resun = []\n",
-    "aperture = []\n",
-    "s_dist = []\n",
+    "# Delete columns with only 1 Unique value\n",
+    "df2 = df\n",
+    "for col in df2.columns:\n",
+    "    if len(df2[col].unique()) == 1:\n",
+    "        df.drop(col,inplace=True,axis=1)\n",
     "\n",
-    "for x in images_:\n",
-    "    with open(x, 'rb') as image_file:\n",
-    "        my_image = Image(image_file)\n",
-    "        xres.append(my_image.x_resolution)\n",
-    "        yres.append(my_image.y_resolution)\n",
-    "        resun.append(my_image.resolution_unit)\n",
-    "        aperture.append(my_image.aperture_value)\n",
-    "        s_dist.append(my_image.subject_distance_range)\n",
-    "\n",
-    "df[\"yres\"] = xres\n",
-    "df[\"xres\"] = yres\n",
-    "df[\"Res. Unit\"] = resun\n",
-    "df[\"Aperture\"] = aperture\n",
-    "df[\"S_Dist\"] = s_dist\n",
-    "df.head()   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for i in my_image:\n",
-    "df2 = pd.DataFrame.from_dict(my_image.get_all())\n",
-    "\n",
-    "df2.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "my_image.__delitem__(\"scene_type\")\n",
-    "my_image.__delitem__('components_configuration')\n",
-    "my_image.__delitem__('maker_note')\n",
-    "my_image.__delitem__('flashpix_version')\n",
-    "my_image.__delitem__('_interoperability_ifd_Pointer')\n",
-    "my_image.__delitem__('file_source')\n",
-    "my_image.get_all()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_values(['DCIM\\\\DJI_202307251543_002_', 'DJI', 'EP800', <Orientation.TOP_LEFT: 1>, 72.0, 72.0, <ResolutionUnit.INCHES: 2>, 'v00.01.1845', '2023:07:25 15:54:02', 1, 182, 686, 'Type=N, Mode=S, DE=None\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00', 'v00.01.1845;1.3.0;v1.0.0\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00', 6, 10228, 10397, 0.000625, 2.8, <ExposureProgram.SHUTTER_PRIORITY: 4>, 500, '0230', '2023:07:25 15:54:01', '2023:07:25 15:54:01', 3.465063769621422, 10.632, 2.97, 0.0, 2.97, 0.0, <MeteringMode.CENTER_WEIGHTED_AVERAGE: 2>, <LightSource.DAYLIGHT: 1>, Flash(flash_fired=False, flash_return=FlashReturn.RESERVED, flash_mode=FlashMode.UNKNOWN, flash_function_not_present=False, red_eye_reduction_supported=False, reserved=0), 8.8, <ColorSpace.SRGB: 1>, 5472, 3648, 0, 0, <ExposureMode.AUTO_EXPOSURE: 0>, <WhiteBalance.AUTO: 0>, 0, 24, <SceneCaptureType.STANDARD: 0>, 0, 0, <Saturation.NORMAL: 0>, <Sharpness.NORMAL: 0>, 0, 'e80aadffcf7b43eb3d0d0fc91997196b', 2, 'S', (1.0, 5.0, 10.8008), 'E', (37.0, 0.0, 26.5759), <GpsAltitudeRef.ABOVE_SEA_LEVEL: 0>, 1526.266])"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "my_image.get_all().values()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "63"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "my_image.list_all()\n",
-    "# my_image.resolution_unit"
+    "df2.nunique()\n",
+    "df2.head(10)"
    ]
   }
  ],
